--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
